# ecommerce-app

./: README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/setup/: settings.py  urls.py
